# pyfuzz

./: README.md  pyfuzz.py  pyproject.toml
src/pyfuzz/: __main__.py  cli.py  pyfuzz.py
